sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value x
  x=getValueCount();
  ^AlgBubbleSort1:6: error: not found: value x
  for (i <- 0 to x-2){
                 ^