sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  x=getValueCount();
  
	for (i <- 0 to x-2){
    if (isSmaller(getValue(i), getValue(i+1))){swap(i,i+1);}
   }      
}
